--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,6 @@
 body {
-  background: #111827;
-  color: white;
-  font-family: sans-serif;
+  background-color: #0f172a;
   margin: 0;
-  padding: 0;
+  font-family: 'Segoe UI', sans-serif;
+  color: white;
 }
